--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
     <title>login</title>
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    
+    <style>
+        .material-symbols-outlined {
+    font-variation-settings:
+    'FILL' 50,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 48
+  }
+    </style>
 </head>
 <body>
     <main>
@@ -22,12 +30,12 @@
                 <form action="login.php" method="post" autocomplete="on">
                     <p>
                         <label for="iemail"><span class="material-symbols-outlined">person</span></label>
-                        <input type="email" name="email" id="iemail" required autocomplete="email" placeholder="seu email">
+                        <input type="email" name="email" id="iemail" class="form" required autocomplete="email" placeholder="seu email">
                     </p>
 
                     <p>
                         <label for="isenha"><span class="material-symbols-outlined">vpn_key</span></label>
-                        <input type="password" name="senha" id="isenha" required placeholder="sua senha">
+                        <input type="password" name="senha" id="isenha" class="form" required placeholder="sua senha">
                     </p>
 
                     <p>
