--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
                     
                     <div class="campo">
                         <i class="material-icons">vpn_key</i> 
-                        <input type="password" name="senha" id="isenha" required placeholder="sua senha" minlength="8" maxlength="25">
+                        <input type="password" name="senha" id="isenha" required placeholder="sua senha" minlength="8" maxlength="25" >
                         <label for="isenha">senha</label>
                     </div>
 
-                    <input type="submit" value="Entrar" class="enviar">
-                    <a href="esqueci.html" class="botao">
+                    <input type="submit" value="Entrar" class="botao">
+                    <a href="esqueci.php" class="botao" target="_blank">
                         Esqueci a senha <i class="material-icons">mail</i>
                     </a>
                    
